// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly light mode 1`] = `
Array [
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".css-1kxonj9{width:100%;position:relative;}",
      }
    }
    data-emotion="css 1kxonj9"
  />,
  <div
    className="MuiBox-root css-1kxonj9"
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": ".css-14j5k7k{position:absolute;width:100%;}",
        }
      }
      data-emotion="css 14j5k7k"
    />
    <div
      className="MuiBox-root css-14j5k7k"
    >
      <style
        dangerouslySetInnerHTML={
          Object {
            "__html": ".css-xcrs9u-MuiLinearProgress-root{position:relative;overflow:hidden;display:block;height:4px;z-index:0;background-color:rgb(193, 188, 219);}@media print{.css-xcrs9u-MuiLinearProgress-root{-webkit-print-color-adjust:exact;color-adjust:exact;}}",
          }
        }
        data-emotion="css xcrs9u-MuiLinearProgress-root"
      />
      <span
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={0}
        className="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-xcrs9u-MuiLinearProgress-root"
        role="progressbar"
      >
        <style
          dangerouslySetInnerHTML={
            Object {
              "__html": ".css-1l32dws-MuiLinearProgress-bar1{width:100%;position:absolute;left:0;bottom:0;top:0;-webkit-transition:-webkit-transform .4s linear;transition:transform .4s linear;transform-origin:left;background-color:#5e50a1;}",
            }
          }
          data-emotion="css 1l32dws-MuiLinearProgress-bar1"
        />
        <span
          className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-1l32dws-MuiLinearProgress-bar1"
          style={
            Object {
              "transform": "translateX(-100%)",
            }
          }
        />
      </span>
    </div>
  </div>,
]
`;

exports[`renders correctly light mode 2`] = `
Array [
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".css-1kxonj9{width:100%;position:relative;}",
      }
    }
    data-emotion="css 1kxonj9"
  />,
  <div
    className="MuiBox-root css-1kxonj9"
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": ".css-14j5k7k{position:absolute;width:100%;}",
        }
      }
      data-emotion="css 14j5k7k"
    />
    <div
      className="MuiBox-root css-14j5k7k"
    >
      <style
        dangerouslySetInnerHTML={
          Object {
            "__html": ".css-pvvytb-MuiLinearProgress-root{position:relative;overflow:hidden;display:block;height:4px;z-index:0;background-color:rgb(32, 20, 85);}@media print{.css-pvvytb-MuiLinearProgress-root{-webkit-print-color-adjust:exact;color-adjust:exact;}}",
          }
        }
        data-emotion="css pvvytb-MuiLinearProgress-root"
      />
      <span
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={0}
        className="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-pvvytb-MuiLinearProgress-root"
        role="progressbar"
      >
        <style
          dangerouslySetInnerHTML={
            Object {
              "__html": ".css-1ir1ncg-MuiLinearProgress-bar1{width:100%;position:absolute;left:0;bottom:0;top:0;-webkit-transition:-webkit-transform .4s linear;transition:transform .4s linear;transform-origin:left;background-color:#4029ab;}",
            }
          }
          data-emotion="css 1ir1ncg-MuiLinearProgress-bar1"
        />
        <span
          className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-1ir1ncg-MuiLinearProgress-bar1"
          style={
            Object {
              "transform": "translateX(-100%)",
            }
          }
        />
      </span>
    </div>
  </div>,
]
`;
